# angular

./: MODULE.bazel  package.json  pnpm-workspace.yaml  test-main.js  test.js
aio/: package.json
aio/content/demos/first-app/: angular.json  package.json
aio/content/examples/accessibility/src/: main.ts
aio/content/examples/ajs-quick-reference/src/: main.ts
aio/content/examples/animations/src/: main.ts
aio/content/examples/architecture/src/: main.ts
aio/content/examples/attribute-directives/src/: main.ts
aio/content/examples/bootstrapping/src/: main.ts
aio/content/examples/built-in-directives/src/: main.ts
aio/content/examples/component-styles/src/: main.ts
aio/content/examples/dependency-injection-in-action/src/: main.ts
aio/content/examples/elements/src/: main.ts
aio/content/examples/upgrade-phonecat-1-typescript/: tsconfig.ajs.json
aio/content/examples/upgrade-phonecat-2-hybrid/: tsconfig-aot.json
aio/tools/examples/shared/: package.json  tsconfig.json
aio/tools/transforms/angular-api-package/: index.js
goldens/public-api/common/: index.md
goldens/public-api/compiler-cli/: error_code.md
goldens/public-api/core/: core.d.ts  errors.api.md  errors.md  index.api.md  index.md
goldens/public-api/router/: index.md
integration/: BUILD.bazel
integration/rxjs7/: BUILD.bazel  WORKSPACE  index.spec.ts  package.json  tsconfig.json
integration/typings_test_ts60/: pnpm-workspace.yaml
modules/benchmarks/: tsconfig-build.json
modules/benchmarks/src/js-web-frameworks/: js-web-frameworks.perf-spec.ts
tools/public_api_guard/core/: core.d.ts
(+457 files in other folders)
