load("@parent//tools:defaults.bzl", "jasmine_node_test", "karma_web_test_suite")

jasmine_node_test(
    name = "test",
    bootstrap = ["//tools/testing:node_es5"],
    deps = [
        "//packages/forms/test:test_lib",
    ],
)

# karma_web_test_suite(
#     name = "test_web",
#     tags = [
#         # disabled on 2020-04-14 due to failure on saucelabs monitor job
#         # https://app.circleci.com/pipelines/github/angular/angular/13320/workflows/9ca3527a-d448-4a64-880a-fb4de9d1fece/jobs/680645
#         # ```
#         # IE 11.0.0 (Windows 8.1.0.0) template-driven forms integration tests basic functionality should report properties which are written outside of template bindings FAILED
#         #   InvalidStateError: InvalidStateError
#         # ```
#         "fixme-saucelabs-ivy",
#     ],
#     deps = [
#         "//packages/forms/test:test_lib",
#     ],
# )
